FBHAJ-57 Initial commit to branch: Major enhancements
- Utility class renamed
- Tabulation fixed in main class
- Version updates in pom.xml
- Examples updated
- New example app created for v0.9